--- a/StuInfoMaSys/StuInfoMaSys/StuInfoMaSys.csproj
+++ b/StuInfoMaSys/StuInfoMaSys/StuInfoMaSys.csproj
@@ -88,9 +88,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Model\Model.csproj">
-      <Project>{78E0EDC2-CFB3-41FD-9E22-7C2F213751F7}</Project>
+    <ProjectReference Include="..\aModel\Model.csproj">
+      <Project>{C17F0A72-9362-46C5-AF60-B7006492568B}</Project>
       <Name>Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NBLL\BLL.csproj">
+      <Project>{ABAD92D4-6BB7-4E1E-8ECB-3D4024B6BD05}</Project>
+      <Name>BLL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
