奖学金信息半完成

--- a/StuInfoMaSys/NDAL/DAL.csproj
+++ b/StuInfoMaSys/NDAL/DAL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="DealDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScholDAL.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
