--- a/StuInfoMaSys/NBLL/BLL.csproj
+++ b/StuInfoMaSys/NBLL/BLL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="DealBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScholBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NDAL\DAL.csproj">
