--- a/StuInfoMaSys/StuInfoMaSys/StuInfoMaSys.csproj
+++ b/StuInfoMaSys/StuInfoMaSys/StuInfoMaSys.csproj
@@ -59,6 +59,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scholarship\AddScholTypeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Scholarship\AddScholTypeForm.Designer.cs">
+      <DependentUpon>AddScholTypeForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -74,6 +80,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Scholarship\AddScholTypeForm.resx">
+      <DependentUpon>AddScholTypeForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -96,6 +105,11 @@
       <Project>{ABAD92D4-6BB7-4E1E-8ECB-3D4024B6BD05}</Project>
       <Name>BLL</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Club\" />
+    <Folder Include="RewardPunishment\" />
+    <Folder Include="StudentInfo\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
