--- a/StuInfoMaSys/NDAL/DAL.csproj
+++ b/StuInfoMaSys/NDAL/DAL.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClubDAL.cs" />
     <Compile Include="DealDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScholDAL.cs" />
