--- a/StuInfoMaSys/NBLL/BLL.csproj
+++ b/StuInfoMaSys/NBLL/BLL.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClubBLL.cs" />
     <Compile Include="DealBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScholBLL.cs" />
