--- a/StuInfoMaSys/StuInfoMaSys/StuInfoMaSys.csproj
+++ b/StuInfoMaSys/StuInfoMaSys/StuInfoMaSys.csproj
@@ -45,6 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Club\AddClubInfoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Club\AddClubInfoForm.Designer.cs">
+      <DependentUpon>AddClubInfoForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Club\QueryClubInfoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Club\QueryClubInfoForm.Designer.cs">
+      <DependentUpon>QueryClubInfoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +89,12 @@
     <Compile Include="Scholarship\QueryScholInfoForm.Designer.cs">
       <DependentUpon>QueryScholInfoForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Club\AddClubInfoForm.resx">
+      <DependentUpon>AddClubInfoForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Club\QueryClubInfoForm.resx">
+      <DependentUpon>QueryClubInfoForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -125,7 +143,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Club\" />
     <Folder Include="RewardPunishment\" />
     <Folder Include="StudentInfo\" />
   </ItemGroup>
