--- a/StuInfoMaSys/NBLL/BLL.csproj
+++ b/StuInfoMaSys/NBLL/BLL.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ClubBLL.cs" />
     <Compile Include="DealBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RPBLL.cs" />
     <Compile Include="ScholBLL.cs" />
   </ItemGroup>
   <ItemGroup>
