--- a/StuInfoMaSys/NBLL/BLL.csproj
+++ b/StuInfoMaSys/NBLL/BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RPBLL.cs" />
     <Compile Include="ScholBLL.cs" />
+    <Compile Include="StuBaseInfoBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NDAL\DAL.csproj">
