--- a/StuInfoMaSys/NDAL/DAL.csproj
+++ b/StuInfoMaSys/NDAL/DAL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RPDAL.cs" />
     <Compile Include="ScholDAL.cs" />
+    <Compile Include="StuBaseInfoDAL.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
